--- a/samples/nacl/index.html
+++ b/samples/nacl/index.html
@@ -54,7 +54,7 @@ function handleMessage(message_event) {
       </script>
       <embed id="fletch"
              width=0 height=0
-             src="nacl.nmf"
+             src="fletch.nmf"
              type="application/x-pnacl" />
   </div>
 </body>
